# Universal-Bitcoin-Identity-Layer

./: .coveragerc  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS_PAYG_AUDIT.md  AGENT_PROTOCOL.md  ARCHITECTURE.md  AUDIT_FINDINGS_2026-03-14.md  BLUEPRINT_ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY_DATABASE.md  Dockerfile  HARDENING_SPRINT_2026-05-04.md  HODLXXI OAuth2 Live Demo.sh  HODLXXI-OPS-CHEATSHEET.md  LICENSE  Makefile  PRODUCTION VALIDATION.sh  PRODUCT_OVERVIEW.md  PUBLIC_SURFACES.md  QUICK_DEPLOY.sh  QUICK_REFERENCE.md  README.md  REDTEAM_INPUT_AUDIT.md  RED_TEAM_AUDIT_2026-04-25.md  RED_TEAM_REMEDIATION_STATUS_2026-04-29.md  RUNTIME_TRANSITION_STATUS.md  SECURITY.md  SECURITY_GUIDE.md  STATE_OF_IMPLEMENTATION.md  STATE_OF_PRODUCT_AND_RUNTIME.md  TESTING.md  TODO_GRANT_GRADE_REMEDIATION.md  TRUST_MODEL.md  VPS_PERFORMANCE_REPORT.md  (+21 more)
.github/: dependabot.yml  pull_request_template.md
.well-known/: agent.json
app/: API_RESPONSE_EXAMPLES.md  ERROR_CODE_DOCUMENTATION.md  OAUTH_LNURL_SPECIFICATION.md  PRIVACY_POLICY.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY_REQUIREMENTS.md  TERMS_OF_SERVICE.md  TOKEN_POLICIES.md  agent_invoice_api.py  agent_signer.py  app.py  app.py.bak-20251130-dashboard  apply_pof_patch.sh  audit_logger.py  auth_api_core.py  auth_session_gate.py  billing_clients.py  browser_compat.py  browser_routes.py  browser_shell_routes.py  config.py  database.py  db_storage.py  dev_routes.py  diagnose_error.sh  docs_routes.py  factory.py  feature_flags.py  jwks.py  models.py  (+30 more)
(+684 files in other folders)
